# aperture

./: Cargo.toml
aperture-movegen/: Cargo.toml
aperture-movegen/src/: fen.rs  lib.rs
