[workspace]
resolver = "3"
members = ["aperture-movegen"]

[workspace.lints.clippy]
cognitive_complexity = "warn"
ref_option = "warn"
ref_option_ref = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
unreadable_literal = "warn"
unused_self = "warn"
verbose_bit_mask = "warn"
many_single_char_names = "warn"
manual_midpoint = "warn"
enum_glob_use = "warn"
cast_possible_wrap = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
unwrap_used = "warn"
expect_used = "warn"
